# pw-manager-env-rs

./: .gitignore  Cargo.toml  README.md  mkdocs.yml  package-lock.json  release-workflow.md
.cargo/: mutants.toml
.github/: cliff.toml
.github/instructions/: cross-platform-cli.instructions.md  release.instructions.md
.github/skills/excalidraw-diagram-authoring/: SKILL.md
.github/skills/excalidraw-diagram-authoring/assets/: api-env.example  scene-template.json
.github/skills/excalidraw-diagram-authoring/references/: animation.md  api-workflows.md  composition.md  examples.md  photosynthesis-example.md  self-hosting.md  sequence-diagrams.md  style-guide.md  theming.md
.github/skills/excalidraw-diagram-authoring/scripts/: check-api-health.mjs  fetch-scene.mjs  new-scene.mjs  publish-scene-link.mjs
.github/skills/release-with-workflows/: SKILL.md
.github/workflows/: coverage.yml  docs.yml  finalize-notarization.yml  mutants-pr.yml  mutants.yml  prepare-release-pr.yml  release.yml  tag-release-pr.yml
docs/: index.md
docs/.vitepress/: config.mts
docs/concepts/: configuration-model.md  resolution-model.md
docs/getting-started/: first-project.md  installation.md  shell-integration.md
docs/public/: install.ps1
docs/reference/: cli.md  configuration-file.md
release-notes/: v0.1.0.md  v0.1.1.md  v0.2.0.md  v0.2.10.md  v0.2.5.md  v0.2.6.md  v0.2.7.md  v0.2.8.md  v0.3.0.md  v0.3.1.md  v0.3.2.md  v0.3.3.md  v0.3.5.md  v0.3.6.md  v0.3.7.md  v0.3.8.md
scripts/: install.sh  release.sh  render-config-flow-screencast.sh  setup-apple-signing-secrets.sh  sync-doc-assets.mjs  update-workflow-action-pins.py
src/: add.rs  cache.rs  config.rs  config_wizard.rs  env_file.rs  main.rs  migrate.rs  output.rs  progress.rs  release.rs  resolve.rs  shell.rs
src/backend/: bw.rs  gpg.rs  mod.rs  op.rs
tests/: command_scoped.rs  config_wizard.rs
