[package]
name = "pw-env"
version = "0.3.2"
edition = "2024"

[[bin]]
name = "pw-env"
path = "src/main.rs"

[dependencies]
mutants = "0.0.3"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dialoguer = "0.12"
dirs = "6"
flate2 = "1"
glob = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
self-replace = "1"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.mutants]
inherits = "test"
debug = "none"
