[package]
name = "pw-env"
version = "0.3.8"
edition = "2024"
description = "CLI for resolving .env secrets from password managers without storing plaintext secrets"
license = "MIT"
readme = "README.md"
repository = "https://github.com/m42e/pw-env"
homepage = "https://m42e.de/pw-env/"
documentation = "https://m42e.de/pw-env/"
keywords = ["dotenv", "secrets", "cli", "shell", "password-manager"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".cargo/**",
    ".github/**",
    ".pre-commit-config.yaml",
    ".rumdl.toml",
    ".venv/**",
    "docs/**",
    "mutants-results/**",
    "mutants.out*/**",
    "node_modules/**",
    "package-lock.json",
    "package.json",
    "public/**",
    "release-notes/**",
    "release-workflow.md",
    "scripts/**",
    "site/**",
    "TODO.md",
]

[[bin]]
name = "pw-env"
path = "src/main.rs"

[dependencies]
mutants = "0.0.4"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
crossterm = "0.29"
dialoguer = "0.12"
dirs = "6"
flate2 = "1"
glob = "0.3"
ratatui = "0.30"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
self-replace = "1"
sha2 = "0.11"
tar = "0.4"
tempfile = "3"
toml = "1.1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zip = { version = "8", default-features = false, features = ["deflate"] }

[dev-dependencies]
portable-pty = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", features = ["windows-native"] }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
keyring = { version = "3.6.3", features = ["sync-secret-service", "crypto-rust"] }

[profile.mutants]
inherits = "test"
debug = "none"
